lalr_logicparser/y.output

state 0
	$accept: .top $end 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	top  goto 1
	term  goto 3
	fmla  goto 2
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  fmla.    (1)

	.  reduce 1 (src line 70)


3: shift/reduce conflict (shift 41(11), red'n 61(0)) on TOK_COLON
3: shift/reduce conflict (shift 19(16), red'n 61(0)) on TOK_DOT
3: shift/reduce conflict (shift 20(12), red'n 61(0)) on TOK_PLUS
3: shift/reduce conflict (shift 21(12), red'n 61(0)) on TOK_MINUS
3: shift/reduce conflict (shift 22(13), red'n 61(0)) on TOK_TIMES
3: shift/reduce conflict (shift 23(13), red'n 61(0)) on TOK_DIV
3: shift/reduce conflict (shift 25(7), red'n 61(0)) on TOK_EQ
3: shift/reduce conflict (shift 31(8), red'n 61(0)) on TOK_TILDAEQ
3: shift/reduce conflict (shift 26(7), red'n 61(0)) on TOK_LE
3: shift/reduce conflict (shift 27(7), red'n 61(0)) on TOK_LT
3: shift/reduce conflict (shift 28(7), red'n 61(0)) on TOK_GE
3: shift/reduce conflict (shift 29(7), red'n 61(0)) on TOK_GT
3: shift/reduce conflict (shift 32(5), red'n 61(0)) on TOK_AND
3: shift/reduce conflict (shift 33(4), red'n 61(0)) on TOK_OR
3: shift/reduce conflict (shift 34(3), red'n 61(0)) on TOK_ARROW
3: shift/reduce conflict (shift 35(3), red'n 61(0)) on TOK_IFF
3: shift/reduce conflict (shift 30(7), red'n 61(0)) on TOK_PTO
3: shift/reduce conflict (shift 40(7), red'n 61(0)) on TOK_ISA
3: shift/reduce conflict (shift 24(9), red'n 61(0)) on TOK_IF
3: shift/reduce conflict (shift 36(0), red'n 61(0)) on TOK_WHENNEXT
3: shift/reduce conflict (shift 37(0), red'n 61(0)) on TOK_WHENPREV
3: shift/reduce conflict (shift 38(0), red'n 61(0)) on TOK_WHENFIRST
3: shift/reduce conflict (shift 39(0), red'n 61(0)) on TOK_WHENLAST
state 3
	term:  term.TOK_DOT appelem 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 
	fmla:  term.    (61)

	TOK_COLON  shift 41
	TOK_DOT  shift 19
	TOK_PLUS  shift 20
	TOK_MINUS  shift 21
	TOK_TIMES  shift 22
	TOK_DIV  shift 23
	TOK_EQ  shift 25
	TOK_TILDAEQ  shift 31
	TOK_LE  shift 26
	TOK_LT  shift 27
	TOK_GE  shift 28
	TOK_GT  shift 29
	TOK_AND  shift 32
	TOK_OR  shift 33
	TOK_ARROW  shift 34
	TOK_IFF  shift 35
	TOK_PTO  shift 30
	TOK_ISA  shift 40
	TOK_IF  shift 24
	TOK_WHENNEXT  shift 36
	TOK_WHENPREV  shift 37
	TOK_WHENFIRST  shift 38
	TOK_WHENLAST  shift 39
	.  reduce 61 (src line 404)


state 4
	term:  appelem.    (22)

	.  reduce 22 (src line 208)


state 5
	term:  var.    (23)

	.  reduce 23 (src line 213)


state 6
	term:  TOK_OLD.appelem 

	TOK_PRESYMBOL  shift 18
	.  error

	appelem  goto 42
	SYMBOLx  goto 16

state 7
	term:  TOK_LPAREN.term TOK_RPAREN 
	term:  TOK_LPAREN.TOK_DOLLAR SYMBOLx simplevars TOK_DOT fmla TOK_RPAREN TOK_LPAREN terms TOK_RPAREN 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 44
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 43
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 8
	term:  TOK_TRUE.    (39)

	.  reduce 39 (src line 303)


state 9
	term:  TOK_FALSE.    (40)

	.  reduce 40 (src line 307)


state 10
	term:  TOK_TILDA.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 45
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 11
	term:  TOK_FORALL.simplevars TOK_DOT term 
	term:  TOK_FORALL.TOK_LPAREN vars TOK_RPAREN term 

	TOK_VARIABLE  shift 49
	TOK_LPAREN  shift 47
	.  error

	simplevar  goto 48
	simplevars  goto 46

state 12
	term:  TOK_EXISTS.simplevars TOK_DOT term 
	term:  TOK_EXISTS.TOK_LPAREN vars TOK_RPAREN term 

	TOK_VARIABLE  shift 49
	TOK_LPAREN  shift 51
	.  error

	simplevar  goto 48
	simplevars  goto 50

state 13
	term:  TOK_GLOBALLY.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 52
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 14
	term:  TOK_EVENTUALLY.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 53
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 15
	term:  TOK_DOLLAR.SYMBOLx TOK_DOT fmla 
	term:  TOK_DOLLAR.SYMBOLx TOK_DOLLAR fmla 

	TOK_PRESYMBOL  shift 18
	.  error

	SYMBOLx  goto 54

state 16
	appelem:  SYMBOLx.    (9)
	appelem:  SYMBOLx.TOK_LPAREN terms TOK_RPAREN 

	TOK_LPAREN  shift 55
	.  reduce 9 (src line 128)


17: shift/reduce conflict (shift 56(11), red'n 11(0)) on TOK_COLON
state 17
	var:  TOK_VARIABLE.    (11)
	var:  TOK_VARIABLE.TOK_COLON atype 

	TOK_COLON  shift 56
	.  reduce 11 (src line 141)


state 18
	SYMBOLx:  TOK_PRESYMBOL.    (2)

	.  reduce 2 (src line 79)


state 19
	term:  term TOK_DOT.appelem 

	TOK_PRESYMBOL  shift 18
	.  error

	appelem  goto 57
	SYMBOLx  goto 16

state 20
	term:  term TOK_PLUS.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 58
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 21
	term:  term TOK_MINUS.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 59
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 22
	term:  term TOK_TIMES.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 60
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 23
	term:  term TOK_DIV.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 61
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 24
	term:  term TOK_IF.fmla TOK_ELSE term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 3
	fmla  goto 62
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 25
	term:  term TOK_EQ.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 63
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 26
	term:  term TOK_LE.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 64
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 27
	term:  term TOK_LT.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 65
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 28
	term:  term TOK_GE.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 66
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 29
	term:  term TOK_GT.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 67
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 30
	term:  term TOK_PTO.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 68
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 31
	term:  term TOK_TILDAEQ.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 69
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 32
	term:  term TOK_AND.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 70
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 33
	term:  term TOK_OR.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 71
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 34
	term:  term TOK_ARROW.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 72
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 35
	term:  term TOK_IFF.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 73
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 36
	term:  term TOK_WHENNEXT.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 74
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 37
	term:  term TOK_WHENPREV.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 75
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 38
	term:  term TOK_WHENFIRST.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 76
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 39
	term:  term TOK_WHENLAST.term 

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  error

	term  goto 77
	appelem  goto 4
	var  goto 5
	SYMBOLx  goto 16

state 40
	term:  term TOK_ISA.atype 

	TOK_PRESYMBOL  shift 18
	TOK_THIS  shift 80
	.  error

	atype  goto 78
	SYMBOLx  goto 79

state 41
	term:  term TOK_COLON.atype 

	TOK_PRESYMBOL  shift 18
	TOK_THIS  shift 80
	.  error

	atype  goto 81
	SYMBOLx  goto 79

state 42
	term:  TOK_OLD appelem.    (24)

	.  reduce 24 (src line 217)


state 43
	term:  term.TOK_DOT appelem 
	term:  TOK_LPAREN term.TOK_RPAREN 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 

	TOK_RPAREN  shift 82
	TOK_COLON  shift 41
	TOK_DOT  shift 19
	TOK_PLUS  shift 20
	TOK_MINUS  shift 21
	TOK_TIMES  shift 22
	TOK_DIV  shift 23
	TOK_EQ  shift 25
	TOK_TILDAEQ  shift 31
	TOK_LE  shift 26
	TOK_LT  shift 27
	TOK_GE  shift 28
	TOK_GT  shift 29
	TOK_AND  shift 32
	TOK_OR  shift 33
	TOK_ARROW  shift 34
	TOK_IFF  shift 35
	TOK_PTO  shift 30
	TOK_ISA  shift 40
	TOK_IF  shift 24
	TOK_WHENNEXT  shift 36
	TOK_WHENPREV  shift 37
	TOK_WHENFIRST  shift 38
	TOK_WHENLAST  shift 39
	.  error


state 44
	term:  TOK_LPAREN TOK_DOLLAR.SYMBOLx simplevars TOK_DOT fmla TOK_RPAREN TOK_LPAREN terms TOK_RPAREN 
	term:  TOK_DOLLAR.SYMBOLx TOK_DOT fmla 
	term:  TOK_DOLLAR.SYMBOLx TOK_DOLLAR fmla 

	TOK_PRESYMBOL  shift 18
	.  error

	SYMBOLx  goto 83

45: shift/reduce conflict (shift 36(0), red'n 41(6)) on TOK_WHENNEXT
45: shift/reduce conflict (shift 37(0), red'n 41(6)) on TOK_WHENPREV
45: shift/reduce conflict (shift 38(0), red'n 41(6)) on TOK_WHENFIRST
45: shift/reduce conflict (shift 39(0), red'n 41(6)) on TOK_WHENLAST
state 45
	term:  term.TOK_DOT appelem 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  TOK_TILDA term.    (41)
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 

	TOK_COLON  shift 41
	TOK_DOT  shift 19
	TOK_PLUS  shift 20
	TOK_MINUS  shift 21
	TOK_TIMES  shift 22
	TOK_DIV  shift 23
	TOK_EQ  shift 25
	TOK_TILDAEQ  shift 31
	TOK_LE  shift 26
	TOK_LT  shift 27
	TOK_GE  shift 28
	TOK_GT  shift 29
	TOK_PTO  shift 30
	TOK_ISA  shift 40
	TOK_IF  shift 24
	TOK_WHENNEXT  shift 36
	TOK_WHENPREV  shift 37
	TOK_WHENFIRST  shift 38
	TOK_WHENLAST  shift 39
	.  reduce 41 (src line 311)


state 46
	simplevars:  simplevars.TOK_COMMA simplevar 
	term:  TOK_FORALL simplevars.TOK_DOT term 

	TOK_COMMA  shift 84
	TOK_DOT  shift 85
	.  error


state 47
	term:  TOK_FORALL TOK_LPAREN.vars TOK_RPAREN term 

	TOK_VARIABLE  shift 17
	.  error

	var  goto 87
	vars  goto 86

state 48
	simplevars:  simplevar.    (17)

	.  reduce 17 (src line 178)


state 49
	simplevar:  TOK_VARIABLE.    (13)
	simplevar:  TOK_VARIABLE.TOK_COLON SYMBOLx 

	TOK_COLON  shift 88
	.  reduce 13 (src line 154)


state 50
	simplevars:  simplevars.TOK_COMMA simplevar 
	term:  TOK_EXISTS simplevars.TOK_DOT term 

	TOK_COMMA  shift 84
	TOK_DOT  shift 89
	.  error


state 51
	term:  TOK_EXISTS TOK_LPAREN.vars TOK_RPAREN term 

	TOK_VARIABLE  shift 17
	.  error

	var  goto 87
	vars  goto 90

52: shift/reduce conflict (shift 36(0), red'n 50(2)) on TOK_WHENNEXT
52: shift/reduce conflict (shift 37(0), red'n 50(2)) on TOK_WHENPREV
52: shift/reduce conflict (shift 38(0), red'n 50(2)) on TOK_WHENFIRST
52: shift/reduce conflict (shift 39(0), red'n 50(2)) on TOK_WHENLAST
state 52
	term:  term.TOK_DOT appelem 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  TOK_GLOBALLY term.    (50)
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 

	TOK_COLON  shift 41
	TOK_DOT  shift 19
	TOK_PLUS  shift 20
	TOK_MINUS  shift 21
	TOK_TIMES  shift 22
	TOK_DIV  shift 23
	TOK_EQ  shift 25
	TOK_TILDAEQ  shift 31
	TOK_LE  shift 26
	TOK_LT  shift 27
	TOK_GE  shift 28
	TOK_GT  shift 29
	TOK_AND  shift 32
	TOK_OR  shift 33
	TOK_ARROW  shift 34
	TOK_IFF  shift 35
	TOK_PTO  shift 30
	TOK_ISA  shift 40
	TOK_IF  shift 24
	TOK_WHENNEXT  shift 36
	TOK_WHENPREV  shift 37
	TOK_WHENFIRST  shift 38
	TOK_WHENLAST  shift 39
	.  reduce 50 (src line 349)


53: shift/reduce conflict (shift 36(0), red'n 51(2)) on TOK_WHENNEXT
53: shift/reduce conflict (shift 37(0), red'n 51(2)) on TOK_WHENPREV
53: shift/reduce conflict (shift 38(0), red'n 51(2)) on TOK_WHENFIRST
53: shift/reduce conflict (shift 39(0), red'n 51(2)) on TOK_WHENLAST
state 53
	term:  term.TOK_DOT appelem 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  TOK_EVENTUALLY term.    (51)
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 

	TOK_COLON  shift 41
	TOK_DOT  shift 19
	TOK_PLUS  shift 20
	TOK_MINUS  shift 21
	TOK_TIMES  shift 22
	TOK_DIV  shift 23
	TOK_EQ  shift 25
	TOK_TILDAEQ  shift 31
	TOK_LE  shift 26
	TOK_LT  shift 27
	TOK_GE  shift 28
	TOK_GT  shift 29
	TOK_AND  shift 32
	TOK_OR  shift 33
	TOK_ARROW  shift 34
	TOK_IFF  shift 35
	TOK_PTO  shift 30
	TOK_ISA  shift 40
	TOK_IF  shift 24
	TOK_WHENNEXT  shift 36
	TOK_WHENPREV  shift 37
	TOK_WHENFIRST  shift 38
	TOK_WHENLAST  shift 39
	.  reduce 51 (src line 353)


state 54
	term:  TOK_DOLLAR SYMBOLx.TOK_DOT fmla 
	term:  TOK_DOLLAR SYMBOLx.TOK_DOLLAR fmla 

	TOK_DOT  shift 91
	TOK_DOLLAR  shift 92
	.  error


state 55
	appelem:  SYMBOLx TOK_LPAREN.terms TOK_RPAREN 
	terms: .    (19)

	TOK_VARIABLE  shift 17
	TOK_PRESYMBOL  shift 18
	TOK_LPAREN  shift 7
	TOK_TILDA  shift 10
	TOK_DOLLAR  shift 15
	TOK_FORALL  shift 11
	TOK_EXISTS  shift 12
	TOK_TRUE  shift 8
	TOK_FALSE  shift 9
	TOK_OLD  shift 6
	TOK_GLOBALLY  shift 13
	TOK_EVENTUALLY  shift 14
	.  reduce 19 (src line 191)

	term  goto 94
	appelem  goto 4
	var  goto 5
	terms  goto 93
	SYMBOLx  goto 16

state 56
	var:  TOK_VARIABLE TOK_COLON.atype 

	TOK_PRESYMBOL  shift 18
	TOK_THIS  shift 80
	.  error

	atype  goto 95
	SYMBOLx  goto 79

state 57
	term:  term TOK_DOT appelem.    (25)

	.  reduce 25 (src line 221)


58: shift/reduce conflict (shift 36(0), red'n 27(12)) on TOK_WHENNEXT
58: shift/reduce conflict (shift 37(0), red'n 27(12)) on TOK_WHENPREV
58: shift/reduce conflict (shift 38(0), red'n 27(12)) on TOK_WHENFIRST
58: shift/reduce conflict (shift 39(0), red'n 27(12)) on TOK_WHENLAST
state 58
	term:  term.TOK_DOT appelem 
	term:  term.TOK_PLUS term 
	term:  term TOK_PLUS term.    (27)
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term.TOK_EQ term 
	term:  term.TOK_LE term 
	term:  term.TOK_LT term 
	term:  term.TOK_GE term 
	term:  term.TOK_GT term 
	term:  term.TOK_PTO term 
	term:  term.TOK_TILDAEQ term 
	term:  term.TOK_AND term 
	term:  term.TOK_OR term 
	term:  term.TOK_ARROW term 
	term:  term.TOK_IFF term 
	term:  term.TOK_WHENNEXT term 
	term:  term.TOK_WHENPREV term 
	term:  term.TOK_WHENFIRST term 
	term:  term.TOK_WHENLAST term 
	term:  term.TOK_ISA atype 
	term:  term.TOK_COLON atype 

	TOK_DOT  shift 19
	TOK_TIMES  shift 22
	TOK_DIV  shift 23
	TOK_WHENNEXT  shift 36
	TOK_WHENPREV  shift 37
	TOK_WHENFIRST  shift 38
	TOK_WHENLAST  shift 39
	.  reduce 27 (src line 252)

